--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-sneakers",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aliaksei42.github.io/react-shop",
+  "homepage": "",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
